        * FIXES https://bugs.torproject.org/30317
        Update our "howto" box, which explains how one adds bridges to Tor
        Browser.  In addition to updating the instructions, this patch also
        links to instructions for Android.

        * FIXES https://bugs.torproject.org/31967
        Use a CSPRNG for selecting cached CAPTCHAs.

        * FIXES https://bugs.torproject.org/33008
        Add an info page, available at bridges.torproject.org/info.  Relay
        Search links to this info page to explain to bridge operators what their
        bridge distribution mechanism means.

Changes in version 0.9.4 - 2020-02-19

        * FIXES https://bugs.torproject.org/30946
        This patch ports BridgeDB to Python 3.  Python 2 is no longer supported
        since Jan 1, 2020.

Changes in version 0.9.3 - 2020-02-18

        * FIXES <https://bugs.torproject.org/33299>
        This patch disables the distribution of FTE, ScrambleSuit, and obfs3.

Changes in version 0.9.2 - 2020-02-04

        * FIXES <https://bugs.torproject.org/31427>
        This patch updates the AUTHORS file, HACKING.md, contact information,
        the Trac URL to report bugs, our instructions on BridgeDB's landing
        page, and it fixes a small bug in descriptor generation.

Changes in version 0.9.1 - 2019-10-29

        * FIXES https://bugs.torproject.org/32203
        The metrics code used to weed out vanilla bridges, so they did not show
        up in our metrics.  This patch fixes this issue.

        * FIXES https://bugs.torproject.org/32134
        While implementing our language switcher (#26543), we added a new
        string, "Language", that requires translations.  This patch adds a new
        translation request and also updates our instructions on how to request
        new translations.

        * FIXES https://bugs.torproject.org/32105
        Mention an undocumented OS-level dependency: python3-dkim.

Changes in version 0.9.0 - 2019-10-16
